objects/tffa__ApplicationStatusHistory__c.object
<CustomObject>
    <description>Records the application&apos;s characteristics as it transitions from one status to another. Basically a snapshot of the application at the time of transition. Also captures elapsed duration across each status.</description>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to application</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Status Histories</relationshipLabel>
        <relationshipName>StatusHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External identifier - a combination of application id and status</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Fact__c</fullName>
        <description>Reference to application fact</description>
        <label>Fact</label>
        <referenceTo>tffa__ApplicationFact__c</referenceTo>
        <relationshipLabel>Status Histories</relationshipLabel>
        <relationshipName>StatusHistories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, useful for reporting</inlineHelpText>
        <label>Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <description>The current running state of the application for the captured status</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>The status of the application, when the snapshot was taken.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationReportingStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Application Status History</label>
    <nameField>
        <displayFormat>ASH-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>